[package]
name = "rusty-ships"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubism = { git = "https://github.com/Veykril/cubism-rs" }
glium = "0.32.1"
image = "0.24.7"
serde = { version = "1.0.188", features = ["derive"]}
confy = "0.5.1"
