[package]
name = "liver"
version = "1.0.0"
authors = ["impossibleTea <impossibletea@icloud.com>"]
edition = "2021"
description = "Live2D model viewer with support for animation"
repository = "https://github.com/impossibletea/liver"
license = "MIT"
default-run = "liver"

[[bin]]
name = "liver"
path = "src/main.rs"

[[bin]]
name = "bleed"
path = "src/ctl.rs"

[dependencies]
cubism = { path = "res/cubism-rs" }
glium = "0.32.1"
image = "0.24.7"
serde = { version = "1.0.188", features = ["derive"]}
confy = "0.5.1"
takeable-option = "0.5.0"
expanduser = "1.2.2"
